modified style for mobile

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "triviagamequiz",
-  "homepage": " https://ttidesign.github.io/TriviaGamePage",
+  "homepage": " https://ttidesign.github.io/TriviaGamePage/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
